[gd_scene load_steps=7 format=3 uid="uid://cnx5dbp8miuvc"]

[ext_resource type="Script" path="res://level2d_side.gd" id="1_2krcv"]
[ext_resource type="TileSet" uid="uid://buk5iukosth8u" path="res://level.tres" id="1_uuqbk"]
[ext_resource type="PackedScene" uid="uid://dvwjhmlwnvfnh" path="res://knight.tscn" id="2_ow7o4"]
[ext_resource type="PackedScene" uid="uid://dbworsv6nlwo6" path="res://key.tscn" id="5_hj6l3"]
[ext_resource type="PackedScene" uid="uid://b0vi0lobnppa3" path="res://door.tscn" id="6_b6kc3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fi158"]
size = Vector2(89, 20)

[node name="level2dside" type="Node2D"]
script = ExtResource("1_2krcv")
next_scene = "level2d_top_down"

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
tile_set = ExtResource("1_uuqbk")
format = 2
layer_0/name = "background"
layer_0/tile_data = PackedInt32Array(65537, 0, 3, 131073, 0, 3, 196609, 0, 3, 262145, 0, 3, 327681, 0, 3, 393217, 0, 3, 458753, 0, 3, 524289, 0, 3, 65538, 0, 3, 131074, 0, 3, 196610, 0, 3, 262146, 0, 3, 327682, 0, 3, 393218, 0, 3, 458754, 0, 3, 524290, 0, 3, 65539, 0, 3, 131075, 0, 3, 196611, 0, 3, 262147, 0, 3, 327683, 0, 3, 393219, 0, 3, 458755, 0, 3, 524291, 0, 3, 65540, 0, 3, 131076, 0, 3, 196612, 0, 3, 262148, 0, 3, 327684, 0, 3, 393220, 0, 3, 458756, 0, 3, 524292, 0, 3, 65541, 0, 3, 131077, 0, 3, 196613, 0, 3, 262149, 0, 3, 327685, 0, 3, 393221, 0, 3, 458757, 0, 3, 524293, 0, 3, 65542, 0, 3, 131078, 0, 3, 196614, 0, 3, 262150, 0, 3, 327686, 0, 3, 393222, 0, 3, 458758, 0, 3, 524294, 0, 3, 65543, 0, 3, 131079, 0, 3, 196615, 0, 3, 262151, 0, 3, 327687, 0, 3, 393223, 0, 3, 458759, 0, 3, 524295, 0, 3, 65544, 0, 3, 131080, 0, 3, 196616, 0, 3, 262152, 0, 3, 327688, 0, 3, 393224, 0, 3, 458760, 0, 3, 524296, 0, 3, 65545, 0, 3, 131081, 0, 3, 196617, 0, 3, 262153, 0, 3, 327689, 0, 3, 393225, 0, 3, 458761, 0, 3, 524297, 0, 3, 65546, 0, 3, 131082, 0, 3, 196618, 0, 3, 262154, 0, 3, 327690, 0, 3, 393226, 0, 3, 458762, 0, 3, 524298, 0, 3, 65547, 0, 3, 131083, 0, 3, 196619, 0, 3, 262155, 0, 3, 327691, 0, 3, 393227, 0, 3, 458763, 0, 3, 524299, 0, 3, 65548, 0, 3, 131084, 0, 3, 196620, 0, 3, 262156, 0, 3, 327692, 0, 3, 393228, 0, 3, 458764, 0, 3, 524300, 0, 3, 65549, 0, 3, 131085, 0, 3, 196621, 0, 3, 262157, 0, 3, 327693, 0, 3, 393229, 0, 3, 458765, 0, 3, 524301, 0, 3, 65550, 0, 3, 131086, 0, 3, 196622, 0, 3, 262158, 0, 3, 327694, 0, 3, 393230, 0, 3, 458766, 0, 3, 524302, 0, 3, 65551, 0, 3, 131087, 0, 3, 196623, 0, 3, 262159, 0, 3, 327695, 0, 3, 393231, 0, 3, 458767, 0, 3, 524303, 0, 3)
layer_1/name = "walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(589824, 393216, 4, 589825, 393216, 4, 589826, 393216, 4, 589827, 393216, 4, 589828, 393216, 4, 589829, 393216, 4, 589830, 393216, 4, 589831, 393216, 4, 262144, 393216, 4, 262145, 393216, 4, 262146, 393216, 4, 262147, 393216, 4, 262148, 393216, 4, 262149, 393216, 4, 262150, 393216, 4, 262151, 393216, 4, 262160, 393216, 4, 327696, 393216, 4, 393232, 393216, 4, 458768, 393216, 4, 524304, 393216, 4, 589832, 393216, 4, 589833, 393216, 4, 589834, 393216, 4, 589835, 393216, 4, 589836, 393216, 4, 589837, 393216, 4, 589838, 393216, 4, 589839, 393216, 4, 589840, 393216, 4, 327691, 393216, 4, 327692, 393216, 4, 262157, 393216, 4, 262158, 393216, 4, 262159, 393216, 4, 393225, 393216, 4, 393226, 393216, 4, 458759, 393216, 4, 458760, 393216, 4, 196608, 393216, 4, 131072, 393216, 4, 65536, 393216, 4, 0, 393216, 4, 1, 393216, 4, 2, 393216, 4, 3, 393216, 4, 4, 393216, 4, 5, 393216, 4, 6, 393216, 4, 7, 393216, 4, 8, 393216, 4, 9, 393216, 4, 10, 393216, 4, 11, 393216, 4, 12, 393216, 4, 13, 393216, 4, 14, 393216, 4, 15, 393216, 4, 16, 393216, 4, 65552, 393216, 4, 131088, 393216, 4, 196624, 393216, 4, 327680, 393216, 4, 393216, 393216, 4, 655360, 458752, 4, 720896, 458752, 4, 786432, 458752, 4, 655361, 458752, 4, 720897, 458752, 4, 786433, 458752, 4, 655362, 458752, 4, 720898, 458752, 4, 786434, 458752, 4, 655363, 458752, 4, 720899, 458752, 4, 786435, 458752, 4, 655364, 458752, 4, 720900, 458752, 4, 786436, 458752, 4, 655365, 458752, 4, 720901, 458752, 4, 786437, 458752, 4, 655366, 458752, 4, 720902, 458752, 4, 786438, 458752, 4, 655367, 458752, 4, 720903, 458752, 4, 786439, 458752, 4, 655368, 458752, 4, 720904, 458752, 4, 786440, 458752, 4, 655369, 458752, 4, 720905, 458752, 4, 786441, 458752, 4, 655370, 458752, 4, 720906, 458752, 4, 786442, 458752, 4, 655371, 458752, 4, 720907, 458752, 4, 786443, 458752, 4, 655372, 458752, 4, 720908, 458752, 4, 786444, 458752, 4, 655373, 458752, 4, 720909, 458752, 4, 786445, 458752, 4, 655374, 458752, 4, 720910, 458752, 4, 786446, 458752, 4, 655375, 458752, 4, 720911, 458752, 4, 786447, 458752, 4, 655376, 458752, 4, 720912, 458752, 4, 786448, 458752, 4)

[node name="knight" parent="." instance=ExtResource("2_ow7o4")]
position = Vector2(88, 383)

[node name="Key" parent="." instance=ExtResource("5_hj6l3")]
position = Vector2(90, 169)
scale = Vector2(3, 3)

[node name="Door" parent="." instance=ExtResource("6_b6kc3")]
position = Vector2(92, 281)
scale = Vector2(3, 3)

[node name="scene_change" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene_change"]
position = Vector2(92, 276)
shape = SubResource("RectangleShape2D_fi158")
disabled = true

[connection signal="opened" from="Door" to="." method="_on_door_opened"]
[connection signal="body_entered" from="scene_change" to="." method="_on_scene_change_body_entered"]
